Task 2 edit README.md, Dockerfile, docker-compose.yml, .env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "80:80"
+      - "${REACT_APP_NGINX_PORT}:${REACT_APP_DOCKER_PORT}"
+
     env_file:
       - .env
     volumes:
