--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,5 +10,6 @@ services:
       - .env
     volumes:
       - .:/app
+      - /app/node_modules
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     restart: on-failure
