--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,24 @@
+# server {
+#     listen 80;
+#     server_name localhost;
+#
+#     location / {
+#         root /usr/share/nginx/html;
+#         index index.html;
+#         try_files $uri $uri/ /index.html;
+#     }
+# }
 server {
     listen 80;
     server_name localhost;
+    index index.html;
+    root /usr/share/nginx/html;
+    client_max_body_size 20M;
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html;
-        try_files $uri $uri/ /index.html;
+        try_files $uri$args $uri$args/ /index.html;
     }
+
+
+
 }
