--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,27 @@
+#version: "3"
+#services:
+#  app:
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    ports:
+#      - "${REACT_APP_NGINX_PORT}:${REACT_APP_DOCKER_PORT}"
+#    env_file:
+#      - .env
+#    volumes:
+#      - .:/app
+#      - /app/node_modules
+#      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+#    restart: on-failure
+
+
 version: "3"
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+  web:
+    image: nginx:alpine
     ports:
-      - "${REACT_APP_NGINX_PORT}:${REACT_APP_DOCKER_PORT}"
-    env_file:
-      - .env
-    volumes:
-      - .:/app
-      - /app/node_modules
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - "80:80"
     restart: on-failure
+    volumes:
+      - ./build:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
