--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,5 @@
+node_modules
+npm-debug.log
 # Build Folder
 build
 
@@ -23,7 +25,6 @@ coverage
 build/Release
 
 # Dependency directory
-node_modules
 
 # Optional REPL history
 .node_repl_history
