--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
-version: "3"
+version: '3'
 services:
-  app:
+  web:
+    container_name: meduzzen-site
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "${REACT_APP_NGINX_PORT}:${REACT_APP_DOCKER_PORT}"
-    env_file:
-      - .env
     volumes:
       - .:/app
       - /app/node_modules
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "${REACT_APP_API_PORT}:${REACT_APP_DOCKER_PORT}"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
     restart: on-failure
