--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,12 @@
-BROWSER=
+BROWSER=None
 
 REACT_APP_API_HOST=
 REACT_APP_API_PORT=
 
 REACT_APP_DOCKER_PORT=
-REACT_APP_NGINX_PORT=
 
-REACT_APP_BACKEND_PORT=
 REACT_APP_BACKEND_HOST=
+REACT_APP_BACKEND_PORT=
+
+REACT_APP_AUTH0_DOMAIN=
+REACT_APP_AUTH0_CLIENT_ID=
