--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
     "axios": "0.27.2",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "history": "^5.3.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-redux": "^8.1.1",
